<resources>
    <string name="app_name">MemCards</string>
    <string name="title_activity_set_viewer">Sets</string>
    <string name="setSpinPrompt">Choose a colour&#8230;</string>
    <string name="title_activity_card_viewer">Cards</string>
    <string name="card_progress">Progress:</string>
    <string name="title_activity_create_new_card">New Card</string>
    <string name="title_activity_create_new_set">New Set</string>
    <string name="card_front">Front:</string>
    <string name="card_back">Back:</string>
    <string name="card_set_id">Choose a Set:</string>
    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="hint_card_front">Enter the term for the front of the card&#8230;</string>
    <string name="hint_card_back">Enter the term for the back of the card&#8230;</string>
    <string name="hint_set_name">Enter a name for the set&#8230;</string>
    <string name="set_name">Name:</string>
    <string name="set_colour">Colour:</string>
    <string name="set_amount">Cards in set:</string>
    <string name="view_button">VIEW</string>
    <string name="del_confirm">Delete</string>
    <string name="del_cancel">Cancel</string>
    <string name="test_exit_confirm">Confirm</string>
    <string name="dialog_confirm_del">Are you sure you want to delete?</string>
    <string name="dialog_confirm_test_exit">Are you sure you want to exit the test?
        \nYour answers will not be saved.</string>
    <string name="no_card_in_db">Error finding card information in database</string>
    <string name="no_set_in_db">Set could not be loaded from database</string>
    <string name="toast_card_create">Card created</string>
    <string name="toast_card_update">Card updated</string>
    <string name="toast_card_delete">Card deleted</string>
    <string name="toast_set_create">Set created</string>
    <string name="toast_set_update">Set updated</string>
    <string name="toast_set_delete">Set deleted</string>
    <string name="start_test_button">BEGIN TEST</string>
    <string name="no_testing">There are no cards ready to be tested</string>
    <string name="test_date">Scheduled test date:</string>
    <string name="test_time">Scheduled test time:</string>
    <string name="test_update">Last update:</string>
    <string name="input_answer">Input answer&#8230;</string>
    <string name="choices">Choices:</string>
    <string name="answer">Answer:</string>
    <string name="original">Original:</string>
    <string name="test_side_fragment">Test Side</string>
    <string name="title_activity_pre_test_select">Select test items</string>
    <string name="title_activity_test">Testing</string>
    <string name="title_activity_test_results">TestResultsActivity</string>
    <string name="button_done">DONE</string>
    <string name="correct_result">Correct!</string>
    <string name="incorrect_result">Incorrect</string>
    <string name="correct_label">Correct Answer:</string>
    <string name="complete">Complete!</string>
    <string name="next_test">Next test date:</string>
    <string name="level_up">Level up:</string>
    <string name="level_same">No level change:</string>
    <string name="view_card_test_header">Cards are available for testing!</string>
    <string name="title_activity_matching_game">MatchingGameActivity</string>
    <string name="match">MATCH!</string>
    <string name="no_match">NO MATCH</string>
    <string name="winner">YOU WIN!</string>
    <string name="next_question">NEXT >></string>
    <string name="from_level">From</string>
    <string name="to_level">To</string>
    <string name="timer_ready">Ready &#8230;</string>
    <string name="timer_set">Set &#8230;</string>
    <string name="timer_go">GO!</string>
</resources>
