<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bishop.jason.memcardproject.CreateNewSetActivity"
    tools:showIn="@layout/activity_create_new_set" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        android:text="@string/set_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:ems="10"
        android:hint="@string/hint_set_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/standard_padding"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:layout_marginTop="@dimen/double_padding"
        android:text="@string/set_colour"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSetName" />

    <Spinner
        android:id="@+id/spinnerSetColours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:prompt="@string/setSpinPrompt"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/standard_padding"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonCancelSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:layout_marginTop="@dimen/new_card_button_padding"
        android:onClick="endActivity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonSaveSet"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSetColours" />

    <Button
        android:id="@+id/buttonSaveSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/new_card_button_padding"
        android:onClick="saveSet"
        android:text="@string/save_button"
        app:layout_constraintLeft_toRightOf="@+id/buttonCancelSet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSetColours" />

</android.support.constraint.ConstraintLayout>