<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bishop.jason.memcardproject.PreTestSelectActivity"
    tools:showIn="@layout/activity_pre_test_select" >

    <GridView
        android:id="@+id/gridViewTestCards"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewNoTestMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_testing"
        android:textAlignment="center"
        android:textSize="@dimen/input_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutButtons" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_goneMarginBottom="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:layout_marginEnd="@dimen/standard_padding" >

        <Button
            android:id="@+id/buttonCancelTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_padding"
            android:layout_marginTop="@dimen/standard_padding"
            android:onClick="endActivity"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonBeginTest"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonBeginTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_padding"
            android:layout_marginTop="@dimen/standard_padding"
            android:onClick="beginTest"
            android:text="@string/start_test_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonCancelTest"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
