<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <include layout="@layout/card_viewer_card_front"
        android:id="@+id/includeCardFront"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/standard_padding" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_update"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintLeft_toRightOf="@+id/includeCardFront"
        android:layout_marginLeft="@dimen/standard_padding"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/small_padding"
        app:layout_constraintBottom_toTopOf="@+id/textViewUpdate"
        android:layout_marginStart="@dimen/standard_padding" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_date"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintTop_toBottomOf="@+id/textViewUpdate"
        app:layout_constraintLeft_toRightOf="@+id/includeCardFront"
        android:layout_marginLeft="153dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTestDate"
        android:layout_marginStart="@dimen/standard_padding" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_time"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintLeft_toRightOf="@+id/includeCardFront"
        android:layout_marginLeft="@dimen/standard_padding"
        app:layout_constraintTop_toBottomOf="@+id/textViewTestDate"
        app:layout_constraintBottom_toTopOf="@+id/textViewTestTime"
        android:layout_marginStart="@dimen/standard_padding" />

    <TextView
        android:id="@+id/textViewUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintLeft_toRightOf="@+id/includeCardFront"
        android:layout_marginLeft="@dimen/standard_padding"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        android:layout_marginStart="@dimen/standard_padding" />

    <TextView
        android:id="@+id/textViewTestDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintLeft_toRightOf="@+id/includeCardFront"
        android:layout_marginLeft="@dimen/standard_padding"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        android:layout_marginStart="@dimen/standard_padding" />

    <TextView
        android:id="@+id/textViewTestTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintLeft_toRightOf="@+id/includeCardFront"
        android:layout_marginLeft="@dimen/standard_padding"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:layout_marginStart="@dimen/standard_padding"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>