<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bishop.jason.memcardproject.TestSideFragment" >

    <include
        android:id="@+id/includeCardBack"
        layout="@layout/card_viewer_card_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/includeCardFront"
        layout="@layout/card_viewer_card_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="@dimen/standard_padding"
        app:layout_constraintRight_toRightOf="parent" />

    <include layout="@layout/card_view_test"
        android:id="@+id/includeCardTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_padding"
        app:layout_constraintTop_toBottomOf="@+id/includeCardFront"
        android:layout_marginLeft="@dimen/standard_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="@dimen/standard_padding"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        android:text="@string/original"
        app:layout_constraintBottom_toBottomOf="@+id/includeCardBack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/includeCardBack"
        app:layout_constraintTop_toTopOf="@+id/includeCardBack" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        android:text="@string/answer"
        app:layout_constraintBottom_toBottomOf="@+id/includeCardTest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/includeCardTest"
        app:layout_constraintTop_toTopOf="@+id/includeCardTest" />

    <Button
        android:id="@+id/buttonNextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        android:text="@string/next_question"
        android:minHeight="@dimen/zero_width"
        android:minWidth="@dimen/zero_width"
        android:padding="@dimen/standard_padding"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/includeCardTest"
        app:layout_constraintLeft_toRightOf="@+id/includeCardTest"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/includeCardBack" />

</android.support.constraint.ConstraintLayout>
