<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewQuestion"
        android:layout_width="@dimen/mini_card_width"
        android:layout_height="@dimen/mini_card_height"
        android:layout_marginBottom="@dimen/standard_padding"
        android:layout_marginEnd="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_no_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/input_text"
                android:layout_marginRight="@dimen/standard_padding"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="@dimen/standard_padding"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/standard_padding"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/standard_padding" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewAnswer"
        android:layout_width="@dimen/mini_card_width"
        android:layout_height="@dimen/mini_card_height"
        android:layout_marginBottom="@dimen/standard_padding"
        android:layout_marginEnd="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        app:cardCornerRadius="@dimen/standard_padding"
        app:cardElevation="@dimen/card_no_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/cardViewQuestion"
        app:layout_constraintTop_toTopOf="parent" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/input_text"
                android:layout_marginRight="@dimen/standard_padding"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="@dimen/standard_padding"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/standard_padding"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/standard_padding" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/imageViewQuestionResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ok_checkmark"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/standard_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/standard_padding"
        app:layout_constraintLeft_toRightOf="@id/cardViewAnswer"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewQuestionResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/input_text"
        app:layout_constraintLeft_toRightOf="@id/imageViewQuestionResult"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/standard_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/standard_padding"/>

    <TextView
        android:id="@+id/textViewCorrectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/no_padding"
        android:layout_marginStart="@dimen/no_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:text="@string/correct_label"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintLeft_toLeftOf="@id/textViewQuestionResult"
        app:layout_constraintTop_toBottomOf="@id/textViewQuestionResult" />

    <TextView
        android:id="@+id/textViewCorrectAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintTop_toBottomOf="@id/textViewQuestionResult"
        android:layout_marginTop="@dimen/small_padding"
        app:layout_constraintLeft_toRightOf="@+id/textViewCorrectLabel"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginStart="@dimen/small_padding" />

    <TextView
        android:id="@+id/textViewLevelUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_up"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintLeft_toLeftOf="@+id/textViewQuestionResult"
        android:layout_marginLeft="@dimen/no_padding"
        android:layout_marginStart="@dimen/no_padding"
        app:layout_constraintBottom_toTopOf="@id/textViewQuestionResult"
        android:layout_marginBottom="@dimen/small_padding" />

    <TextView
        android:id="@+id/textViewLevelFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_level"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintLeft_toRightOf="@+id/textViewLevelUp"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginStart="@dimen/small_padding"
        app:layout_constraintBottom_toTopOf="@id/textViewQuestionResult"
        android:layout_marginBottom="@dimen/small_padding" />

    <ImageView
        android:id="@+id/imageViewLevelArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/no_padding"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginStart="@dimen/small_padding"
        android:layout_marginTop="@dimen/no_padding"
        app:layout_constraintBottom_toBottomOf="@id/textViewLevelFrom"
        app:layout_constraintLeft_toRightOf="@id/textViewLevelFrom"
        app:layout_constraintTop_toTopOf="@id/textViewLevelFrom"
        app:srcCompat="@drawable/up_arrow"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewLevelTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_level"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintLeft_toRightOf="@+id/imageViewLevelArrow"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginStart="@dimen/small_padding"
        app:layout_constraintBottom_toTopOf="@id/textViewQuestionResult"
        android:layout_marginBottom="@dimen/small_padding" />

    <TextView
        android:id="@+id/textViewNextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_test"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintLeft_toLeftOf="@+id/cardViewQuestion"
        android:layout_marginLeft="@dimen/no_padding"
        android:layout_marginStart="@dimen/no_padding"
        app:layout_constraintTop_toBottomOf="@id/cardViewQuestion"
        android:layout_marginBottom="@dimen/small_padding" />

    <TextView
        android:id="@+id/textViewNextTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/descriptor_text"
        app:layout_constraintLeft_toRightOf="@+id/textViewNextLabel"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginStart="@dimen/small_padding"
        app:layout_constraintTop_toBottomOf="@id/cardViewQuestion"
        android:layout_marginBottom="@dimen/small_padding" />


</android.support.constraint.ConstraintLayout>